# mcp_linux_ssh

./: Cargo.toml  Makefile  README.md
.github/workflows/: README.md  ci.yml  release.yml
src/: config.rs  file_ops.rs  handler.rs  judge.rs  lib.rs  local.rs  main.rs  ssh.rs
src/tools/: copy_file.rs  local.rs  mod.rs  patch_file.rs  ssh.rs
