[package]
name = "mcp_linux_ssh"
version = "0.1.1"
edition = "2024"
description = "MCP server to run operations on a POSIX compatible system (Linux, BSD, macOS) machine over SSH"
authors = ["Link Dupont <link@sub-pop.net>"]
repository = "https://github.com/subpop/mcp_linux_ssh"
documentation = "https://github.com/subpop/mcp_linux_ssh"
license = "MIT"

[dependencies]
anyhow = "1.0.99"
expand-tilde = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = [
    "io-std",
    "rt-multi-thread",
    "process",
    "time",
] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
    "ansi",
    "env-filter",
    "json",
] }
whoami = "1.5.2"
directories = "6.0.0"
rust-mcp-sdk = { version = "0.8.2", default-features = false, features = [
    "server",
    "macros",
    "stdio",
] }
async-trait = "0.1.89"
